--- a/frontend/css/owner/registerStore.css
+++ b/frontend/css/owner/registerStore.css
@@ -286,3 +286,32 @@
   .magrinDiv {
     margin-top: 20px;
   }
+  #loadingSpinner {
+    display: none; /* 기본적으로 숨김 */
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    text-align: center;
+  }
+
+  .spinner {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #3498db;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+  }
+
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+  #loadingMessage {
+    margin-top: 10px;
+    font-size: 1.2em;
+    color: #3498db;
+  }
