Revert "가게 오류 수정 (#164)"
This reverts commit c7dd9eef8634b93710e7034c62cd9fe0885f9ba5.

--- a/frontend/view/owner/registerStore.html
+++ b/frontend/view/owner/registerStore.html
@@ -56,15 +56,10 @@
   <body>
     <div id="app">
       <div class="container-xxl position-relative bg-white d-flex p-0">
-          <!-- 로딩 스피너와 메시지 -->
-        <div id="loadingSpinner">
-          <div class="spinner"></div>
-          <div id="loadingMessage">가게 등록중입니다 잠시 기다려주세요</div>
-        </div>
         <!-- Sidebar Start -->
         <div class="sidebar pe-4 pb-3">
           <nav class="navbar bg-light navbar-light">
-            <a href="/view/user/userLogin" class="navbar-brand mx-4 mb-3">
+            <a href="index" class="navbar-brand mx-4 mb-3">
               <h3 class="text-primary">
                 <i class="fa fa-hashtag me-2"></i>smart reserve
               </h3>
