--- a/frontend/view/owner/menu.html
+++ b/frontend/view/owner/menu.html
@@ -6,6 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
+    <link rel="icon" type="image/png" href="/assets/mainIcon.png" />
 
     <link
       rel="stylesheet"
