회원 화면 개발 1118 오류 수정, console 찍히는거 지웠습니다 (#161)
* 1105 끝

* 1106 1444

* 1107 화면개발

화면개발

* 1108 커밋

1108 화면개발

* 1112까지

* 1113 커밋

아직 post가 안된다

* 1118 오류 수정

* 1118 1750 커밋

--- a/frontend/css/user/searchStores.css
+++ b/frontend/css/user/searchStores.css
@@ -22,13 +22,18 @@
 .favorite-icon .black-heart {
   color: black;
 }
+.storeImg {
+  overflow-x: auto;
+  white-space: nowrap;
+}
 .store-image {
-  max-width: 280px;
+  max-width: 100%;
   width: 280px;
   height: 180px;
   padding: 3px;
   border-radius: 5px;
   object-fit: cover;
+  overflow-x: auto;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 .storeAddress {
