--- a/frontend/css/user/store.css
+++ b/frontend/css/user/store.css
@@ -113,9 +113,11 @@
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease;
-  background-image: url("/assets/user/img/계란쿵야.png");
-  background-size: cover;
+  background-image: url("/assets/user/img/화살표.png");
+  background-size: 50%;
+  background-repeat: no-repeat;
   background-position: center;
+  padding-top: 15px;
   padding-top: 20px;
 }
 .more-text {
