--- a/frontend/view/user/cart.html
+++ b/frontend/view/user/cart.html
@@ -30,13 +30,11 @@
       rel="stylesheet"
     />
     <link href="/css/user/cart.css" rel="stylesheet" />
-    <link href="/css/user/header.css" rel="stylesheet" />
   </head>
   <body>
     <div id="app">
-      <header-component></header-component>
+      <header-navbar></header-navbar>
 
-      <!-- 메뉴 섹션 -->
       <div class="container section-container menu-section">
         <h2 class="section-title">
           <i class="fa-solid fa-store"></i> 선택하신 식당 메뉴 정보
@@ -70,7 +68,6 @@
         </div>
       </div>
 
-      <!-- 예약 정보 섹션 -->
       <div class="container section-container reservation-section">
         <h2 class="section-title">
           <i class="fa-solid fa-user"></i> 예약 정보 입력
@@ -109,7 +106,6 @@
         </div>
       </div>
 
-      <!-- 결제 섹션 -->
       <div class="container section-container payment-section">
         <h2 class="section-title">
           <i class="fa-solid fa-credit-card"></i> 결제 수단
@@ -157,12 +153,10 @@
           </div>
         </div>
       </div>
-
       <footer-component></footer-component>
     </div>
 
-    <script src="/js/Footer.js"></script>
-    <script src="/js/Header.js"></script>
+    <script src="/js/user/component.js"></script>
     <script src="/js/user/cart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
