--- a/frontend/view/user/searchStores.html
+++ b/frontend/view/user/searchStores.html
@@ -31,17 +31,16 @@
       rel="stylesheet"
     />
     <link href="/css/user/searchStores.css" rel="stylesheet" />
-    <link href="/css/user/header.css" rel="stylesheet" />
   </head>
   <body>
     <div id="app">
-      <header-component></header-component>
+      <header-navbar></header-navbar>
       <div class="container">
         <table class="table">
           <tbody>
             <tr
-              v-for="store in stores"
-              :key="store.storeId"
+              v-for="(store, index) in stores"
+              :key="store.storeId + '-' + index"
               @click="goToStore(store.storeId)"
             >
               <td>
@@ -129,7 +128,7 @@
       <footer-component></footer-component>
     </div>
     <script src="/js/Footer.js"></script>
-    <script src="/js/Header.js"></script>
+    <script src="/js/user/component.js"></script>
     <script src="/js/user/searchStores.js"></script>
   </body>
 </html>
