관리자 버그 수정
favicon 적용
api 주소 수정
unused import 제거
데이터 요약정보 수정

--- a/frontend/view/admin/srAdminIndex.html
+++ b/frontend/view/admin/srAdminIndex.html
@@ -2,10 +2,11 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>스마트한 예약 경험 | 관리자</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
+    <link rel="icon" type="image/png" href="/assets/mainIcon.png" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fonts-archive/AppleSDGothicNeo/AppleSDGothicNeo.css" type="text/css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
