--- a/frontend/view/admin/srAdminLogin.html
+++ b/frontend/view/admin/srAdminLogin.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
       <meta charset="utf-8">
-      <title>어드민 로그인</title>
+      <title>스마트한 예약 경험 | 관리자 로그인</title>
       <meta content="width=device-width, initial-scale=1.0" name="viewport">
       <meta content="" name="keywords">
       <meta content="" name="description">
