--- a/frontend/view/user/storeDetail.html
+++ b/frontend/view/user/storeDetail.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ae7f9510119596f0c0ff9416ba9caf07"></script>
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js"></script>
     
+    <script src="/js/axiosSetting.js"></script>
     <script src="/js/user/userHeader.js" defer></script>
     <script src="/js/user/storeDetails/storeDetail.js" defer></script>
 
