--- a/frontend/css/user/store.css
+++ b/frontend/css/user/store.css
@@ -42,7 +42,7 @@
   flex-shrink: 0;
 }
 .card:hover img {
-  opacity: 0.3; /* 카드 이미지가 어두워짐 */
+  opacity: 0.3;
 }
 .card-overlay {
   position: absolute;
@@ -50,7 +50,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7); /* 반투명 검정 배경 */
+  background: rgba(0, 0, 0, 0.7);
   color: white;
   display: flex;
   font-size: 12px;
@@ -230,4 +230,10 @@
 .category-item {
   font-size: 20px;
   font-weight: bold;
+}
+html,
+body {
+  height: 100%;
+  margin: 0;
+  background-color: #f8f9fa;
 }
