--- a/frontend/view/user/stores.html
+++ b/frontend/view/user/stores.html
@@ -30,19 +30,12 @@
       href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link href="/css/user/mainlogo.css" rel="stylesheet" />
     <link href="/css/user/store.css" rel="stylesheet" />
   </head>
   <body>
-    <div id="app">
+    <div id="app" class="bg-light">
       <header-navbar></header-navbar>
-      <!-- <div style="text-align: center; margin-top: 80px">
-        <img
-          src="/assets/user/img/welcome.png"
-          alt="welcome"
-          width="65%"
-          height="360"
-        />
-      </div> -->
       <div class="container">
         <div class="slider-heading">마음에 들 만한 곳을 모아봤어요</div>
       </div>
@@ -140,7 +133,7 @@
             </div>
           </div>
           <div class="card more-card" @click="showMore">
-            <p class="more-text">원하는 식당이 없으시다면 Click!</p>
+            <p class="more-text">더보기</p>
           </div>
         </div>
         <span
@@ -198,7 +191,7 @@
             </div>
           </div>
           <div class="card more-card" @click="showMore">
-            <p class="more-text">원하는 식당이 없으시다면 Click!</p>
+            <p class="more-text">더보기</p>
           </div>
         </div>
         <span
@@ -251,7 +244,7 @@
             </div>
           </div>
           <div class="card more-card" @click="showMore">
-            <p class="more-text">원하는 식당이 없으시다면 Click!</p>
+            <p class="more-text">더보기</p>
           </div>
         </div>
         <span
