--- a/frontend/view/user/cart.html
+++ b/frontend/view/user/cart.html
@@ -29,10 +29,11 @@
       href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/css//user/mainlogo.css" />
     <link href="/css/user/cart.css" rel="stylesheet" />
   </head>
   <body>
-    <div id="app">
+    <div id="app" class="bg-light">
       <header-navbar></header-navbar>
 
       <div class="container section-container menu-section">
