장바구니 초기화 로직 수정
장바구니 목록 api 호출 > 장바구니 삭제 api > 장바구니 추가 로직시 api 요청이 완료되지 않았지만 예약 페이지로 이동이 되어 예약페이지에서 cart 목록이 제대료 포시되지 않던 현상 promise를 이용해 작업이모두 완료되면 location을 변경해주도록 수정

디테일 페이지 헤더 컴포넌트 수정

--- a/frontend/view/user/storeDetail.html
+++ b/frontend/view/user/storeDetail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <title>스마트한 예약 경험 | 상세정보</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fonts-archive/AppleSDGothicNeo/AppleSDGothicNeo.css" type="text/css"/>
     <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/user/mainlogo.css" rel="stylesheet">
@@ -17,32 +17,23 @@
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ae7f9510119596f0c0ff9416ba9caf07"></script>
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js"></script>
     
-    <script src="/js/axiosSetting.js"></script>
     <script src="/js/user/userHeader.js" defer></script>
     <script src="/js/user/storeDetails/storeDetail.js" defer></script>
+    <script src="/js/user/component.js"></script>
+    <script src="/js/axiosSetting.js"></script>
 
     <script src="https://kit.fontawesome.com/aebc8a6fa8.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
-
-    <header>
-        <div class="header_container">
-           <a class="navbar-brand fs-3 text-warning fw-bold" href="#"><img src="/assets/mainIcon.png"> SmartReserve</a>
-            <div class="search_container">
-            <i class="fa-solid fa-magnifying-glass search_icon"></i>
-            <input type="text" placeholder="찾고 있는 맛집이 있나요?" class="search_box">
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-bell"></i>
-            </div>
-         
+  <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50  d-flex align-items-center justify-content-center">
+    <div class="spinner-grow text-warning" role="status"></div>
+  </div>
+    <div id="app" class="bg-light">
+        <div class="container-fluid bg-light">
+            <header-navbar></header-navbar>
         </div>
-    </header>
-
-
-
-    <div  id="app">
         <div class="details_container">
             <div class="restaurant-header">
 
