--- a/frontend/view/user/storeDetails/recommend.html
+++ b/frontend/view/user/storeDetails/recommend.html
@@ -3,23 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <title>스마트한 예약 경험 | 추천 레스토랑</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fonts-archive/AppleSDGothicNeo/AppleSDGothicNeo.css" type="text/css"/>
     <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/user/mainlogo.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/user/header.css">
     <link rel="stylesheet" href="/css/user/storeDetail.css">
+    <link rel="stylesheet" href="/css/user/storeDetails/storeDetail_recommend.css">
+    <link rel="stylesheet" href="/css/user/mainlogo.css">
     
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    
+    <script src="https://kit.fontawesome.com/9ebc532cee.js" crossorigin="anonymous"></script>
     <script src="/js/user/storeDetails/storeDetail_recommend.js" defer></script>
-    <link rel="stylesheet" href="/css/user/storeDetails/storeDetail_recommend.css">
+    <script src="/js/user/component.js"></script>
+    <script src="/js/axiosSetting.js"></script>
 </head>
 <body>
-    <div id="app">
+    <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50  d-flex align-items-center justify-content-center">
+      <div class="spinner-grow text-warning" role="status"></div>
+    </div>
+    <div id="app" class="bg-light">
+        <div class="container-fluid bg-light">
+            <header-navbar></header-navbar>
+        </div>
         <div class="square_section">
 
             <h2 class="my_title">비슷한 레스토랑 추천</h2>
