--- a/frontend/css/user/cart.css
+++ b/frontend/css/user/cart.css
@@ -1,14 +1,14 @@
+html,
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
-  padding-top: 90px;
+  height: 100%;
+  margin: 0;
+  background-color: #f8f9fa;
 }
 .container {
   padding-top: 90px;
   max-width: 1000px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #fff;
   border-radius: 10px;
 }
 h1 {
@@ -154,7 +154,6 @@ button[type="submit"]:hover {
   color: #212529;
 }
 .section-container {
-  background-color: #f8f9fa;
   padding: 20px;
   margin-bottom: 20px;
   border-radius: 8px;
@@ -180,20 +179,6 @@ button[type="submit"]:hover {
   border: none;
   cursor: pointer;
   transition: background-color 0.3s;
-}
-.kakao-pay {
-  background-color: #ffeb3b;
-  color: #000;
-}
-.kakao-pay:hover {
-  background-color: #fdd835;
-}
-.meet-pay {
-  background-color: #007bff;
-  color: #fff;
-}
-.meet-pay:hover {
-  background-color: #0056b3;
 }
 .error-message {
   color: red;
