오류 수정 완료

--- a/frontend/view/owner/storeModify.html
+++ b/frontend/view/owner/storeModify.html
@@ -153,6 +153,7 @@
               </div>
             </div>
           </div>
+          <div class="magrinDiv" style="color: red;"> ※ 마감시간이 오후 12:00 이후일 경우 가게 예약 슬롯이 생성되지 않습니다 ※ </div>
           <div class="address-container magrinDiv">
             주소 입력 
             <!-- 주소 검색 -->
