--- a/frontend/view/owner/registerStore.html
+++ b/frontend/view/owner/registerStore.html
@@ -181,6 +181,7 @@
               </div>
             </div>
           </div>
+          <div class="magrinDiv" style="color: red;"> ※ 마감시간이 오후 12:00 이후일 경우 가게 예약 슬롯이 생성되지 않습니다 ※ </div>
           <div class="address-container magrinDiv">
             주소 입력
             <!-- 주소 검색 -->
@@ -206,6 +207,8 @@
             </div>
           </div>
 
+          <div class="magrinDiv" style="color: red;"> ※ 카테고리는 필수 항목입니다 (최소 1개) ※ </div>
+
           <!-- 편의시설 버튼들 -->
           <div class="magrinDiv">
             <label for="facility">편의시설 선택</label>
@@ -220,6 +223,8 @@
               </div>
             </div>
           </div>
+
+          <div class="magrinDiv" style="color: red;"> ※ 편의시설은 필수 항목입니다 (최소 1개) ※ </div>
 
           <div class="mb-3 magrinDiv" >
             <!-- 이미지 업로드 설명 및 최대 5개 텍스트 -->
